# extract_model

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  README.md  codecov.yml  conda-requirements-opt-win.txt  conda-requirements-opt.txt  conda-requirements.txt  environment-linux.yml  environment-mac.yml  environment-win.yml  environment.yml  pull_request_template.md  pyproject.toml  requirements-linux.txt  requirements-mac.txt  setup.cfg  setup.py
.github/workflows/: linting.yaml  python-package-conda.yml  release.yaml  test.yaml
ci/: environment-macos-latest-py3.8.yml  environment-py3.10-win.yml  environment-py3.10.yml  environment-py3.11-win.yml  environment-py3.11.yml  environment-py3.12-win.yml  environment-py3.12.yml  environment-py3.13-win.yml  environment-py3.13.yml  environment-py3.7-win.yml  environment-py3.7.yml  environment-py3.8-win.yml  environment-py3.8.yml  environment-py3.9-win.yml  environment-py3.9.yml  environment-ubuntu-latest-py3.8.yml
docs/: api.rst  conf.py  environment.yml  featuretypes.md  index.rst  models.ipynb  models.md  requirements.txt  ts_work.ipynb  ts_work.md  unstructured_subsetting.ipynb  unstructured_subsetting.md  whats_new.rst
docs/css/: custom.css
extract_model/: __init__.py  _version.py  accessor.py  extract_model.py  model_type.py  preprocessing.py  pyinterp_shim.py  sorting.py  utils.py
extract_model/grids/: __init__.py  triangular_mesh.py
extract_model/xr/: __init__.py  triangular_mesh_netcdf.py
tests/: make_test_datasets.py  model_configs.yaml  test.py  test_accessor.py  test_datasets.py  test_dummy.py  test_em.py  test_hycom.nc  test_hycom2.nc  test_mom6.nc  test_roms.nc  test_sel2d.py  test_sorting.py  test_utils.py  utils.py
tests/data/: dbofs_sample.nc  fake_fvcom.nc  test_creofs_selfe.nc  test_leofs_fvcom.nc
tests/dynamic/: __init__.py  data_helper.py
tests/dynamic/data/: cbofs.cdl  ciofs.cdl  dbofs.cdl  tbofs.cdl
tests/grids/: test_triangular_mesh.py
tests/test_results/: grid_temp_horinterp_xesmf.nc  profile_salt_horinterp_False.nc  timeSeriesProfile_temp_horinterp_False.nc  timeSeries_temp_horinterp_delaunay.nc  timeSeries_zeta_horinterp_False.nc  trajectoryProfile_salt_horinterp_True.nc  trajectory_salt_horinterp_True.nc
tests/xr/: test_triangular_mesh_netcdf.py
