[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.isort]
known_third_party = ["cf_xarray", "netcdf4", "pytest", "scikit-learn", "setuptools", "xarray", "xoak", "yaml"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
# only test the root level, otherwise it picks up the tests of the project template
testpaths = [
    "tests",
]

[tool.pylint.basic]
good-names = [
    "fd",  # Commonly used to mean file-descriptor
    "ds",  # Commonly used to mean dataset
    "nc",  # Commonly used to mean an open netCDF file
    "i",   # First index of a multi-dimensional array
    "j",   # Second index of a multi-dimensional array
    "k",   # Third index of a multi-dimensional array
    "x",   # A scalar or array representing the first cartesian coordinate
    "y",   # A scalar or array representing the second cartesian coordinate
    "p",   # A point
    "T",   # A matrix characterizing a linear map
]
