[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = extract_model/_version.py


[metadata]
name = extract_model
description = Facilitates read-in and extraction for ocean model output.
author = Kristen Thyng
url = https://github.com/axiom-data-science/extract_model
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # Dont change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = kristen@axds.co


### make sure to fill in your dependencies!
[options]
install_requires =
    cf_xarray
    cmocean
    dask
    matplotlib
    netcdf4
    numpy
    pip
    requests
    scikit-learn
    scipy
    xarray
    xcmocean
    xoak

setup_requires=
    setuptools_scm
python_requires = >=3.7
################ Up until here

zip_safe = False
packages = find:
